Generated openapi yml for @Body + String datatype variable is with errors
Fixed #1930